try resolve problems: 1. gap 35px in line1; 2. label text - centre and font robot

--- a/css/style.css
+++ b/css/style.css
@@ -20,28 +20,50 @@
   }
   
   .line1{
-    /* height: 840px;
-    width: 200px; */
     grid-area: line1;
+    grid-template-columns: 1fr 35px 1fr;
+    grid-template-rows: 1fr;
+  
+    display: flex;
     justify-content: space-between;
   }
   
   .item1{
-    width: 420px;
-    height: 200px;
-    align-content: center;
-    text-align: center;
+    /* width: 420px;
+    height: 200px; */
+    height: 100%;
+    width: 100%;
+    border: 1px solid black;
   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;  
+
   }
   
+  .labelB{
+    width: 234px;
+    height: 56px;
+    border: 1px solid black;
+
+    /* align-content: center;
+    justify-content:center; */
+    text-align: center;
+    /* font: 58px roboto;
+    font-weight: 400; */
+    line-height:14px;
+  }
+
   .item2{
-    width: 420px;
-    height: 200px;
+    /* width: 420px;
+    height: 200px; */
   }
   
   img {
-    max-height: 100%;
-    min-width: 100%;
+    height: 100%;
+    width: 100%;
+    border: 1px solid black;
   }
   
   .image2{
